tests/res/functions/error_tail_without_return.say
// A brace block never implicitly returns its last expression; `return` is required.
fn f() { 1 } // error: Unexpected token: Expected ';' but found '}'
